added private key path

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 become = true
-ansible_private_rivate_key_file = ~/.ssh/id_ed25519
+private_key_file = ~/.ssh/id_ed25519
 deprecation_warnings = False
