--- a/local.yml
+++ b/local.yml
@@ -4,6 +4,9 @@
   connection: local
 
   tasks:
-  - name: install htop
+  - name: install packages
     package: 
-      name: htop
+      name: 
+        - htop
+        - tmux
+        - vim-nox
