--- a/local.yml
+++ b/local.yml
@@ -9,6 +9,8 @@
       dnf:
         update_cache: yes
       changed_when: false
+      args:
+      warn: false
 
   tasks:
   - include: tasks/users.yml
