added localhost_warning removal

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
 become = true
 private_key_file = ~/.ssh/id_ed25519
-deprecation_warnings = False
+deprecation_warnings = false
+localhost_warning = false
