--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,6 @@ become = true
 private_key_file = ~/.ssh/id_ed25519
 deprecation_warnings = false
 localhost_warning = false
+host_key_checking = false
+interpreter_python = /usr/bin/python3
+forks = 3
