--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 become = true
+log_path = /var/log/ansible.log
 private_key_file = ~/.ssh/id_ed25519
 deprecation_warnings = false
 localhost_warning = false
