updated ansible.cfg file and added cron task

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 become = true
 log_path = /var/log/ansible.log
+stdout_callback = debug
 private_key_file = ~/.ssh/id_ed25519
 deprecation_warnings = false
 localhost_warning = false
