--- a/tasks/cron.yml
+++ b/tasks/cron.yml
@@ -10,5 +10,5 @@
     name: remove ansible logs every 2mins
     user: ansible
     minute: "*/2"
-    job:  root find /var/log/ansible.log -type f -mmin +5 -exec rm {} +
+    job:  ansible find /var/log/ansible.log -type f -mmin +5 -exec rm {} +
 
