--- a/tasks/cron.yml
+++ b/tasks/cron.yml
@@ -3,12 +3,12 @@
     name: ansible auto-provision
     user: ansible
     minute: "*/5"
-    job: ansible-pull -o -U https://github.com/iamsyl/serversetup.git
+    job: sudo ansible-pull -o -U https://github.com/iamsyl/serversetup.git
 
 - name: delete old ansible logs
   cron:
     name: remove ansible logs every 2mins
     user: ansible
     minute: "*/2"
-    job:  ansible find /var/log/ansible.log -type f -mmin +5 -exec rm {} +
+    job:  root find /var/log/ansible.log -type f -mmin +5 -exec rm {} +
 
