--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 become = true
-log_path = /var/log/ansible.log
+log_path = /var/log/ansible-serversetup.log
 stdout_callback = debug
 private_key_file = ~/.ssh/id_ed25519
 deprecation_warnings = false
