--- a/local.yml
+++ b/local.yml
@@ -16,8 +16,12 @@
         update_cache: yes
       changed_when: false
       when: ansible_os_family == "Debian"
+  
+  vars:
+  - include: vars/joindomainvars.yml
 
   tasks:
+  - include: task/joindomain.yml 
   - include: tasks/users.yml
   - include: tasks/packages.yml
   - include: tasks/cron.yml
