--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,4 +1,18 @@
 - name: install packages
   package: 
     name: 
-      - tmux
+      - wget
+      - curl
+      - net-tools
+      - lsof
+      - bash-completion
+      - sssd
+      - realmd
+      - oddjob
+      - oddjob-mkhomdir
+      - adcli
+      - samba-common
+      - samba-common-tools
+      - krb5-workstation
+      - openldap-clients
+      - policycoreutils-python
