--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -9,10 +9,11 @@
       - sssd
       - realmd
       - oddjob
-      - oddjob-mkhomdir
+      - oddjob-mkhomedir
       - adcli
       - samba-common
       - samba-common-tools
       - krb5-workstation
       - openldap-clients
       - policycoreutils-python
+  ignore_errors: yes
