--- a/tasks/joindomain.yml
+++ b/tasks/joindomain.yml
@@ -2,7 +2,8 @@
   shell: systemctl stop ntpd ; ntpdate {{ ad_server_ip }} && systemctl start ntpd
   register: timesync_result
   changed_when: false
-
+ ignore_errors: true
+ 
 - name: Check Domain Join Status
   shell: id {{ad_join_user}}
   register: ad_status
