--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -16,4 +16,5 @@
       - krb5-workstation
       - openldap-clients
       - policycoreutils-python
+      - python3-policycoreutils
   ignore_errors: yes
