--- a/tasks/joindomain.yml
+++ b/tasks/joindomain.yml
@@ -1,8 +1,8 @@
-- name: Sync time with AD server
-  shell: systemctl stop ntpd ; ntpdate {{ ad_server_ip }} && systemctl start ntpd
-  register: timesync_result
-  changed_when: false
-  ignore_errors: true
+#- name: Sync time with AD server
+#  shell: systemctl stop ntpd ; ntpdate {{ ad_server_ip }} && systemctl start ntpd
+#  register: timesync_result
+#  changed_when: false
+#  ignore_errors: true
  
 - name: Check Domain Join Status
   shell: id {{ad_join_user}}
