--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 become = true
+ask_vault_pass = true
 log_path = /var/log/ansible-serversetup.log
 stdout_callback = debug
 private_key_file = ~/.ssh/id_ed25519
