--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 become = true
 ask_vault_pass = true
-log_path = /var/log/ansible-serversetup.log
+log_path = /var/log/ansible.log
 stdout_callback = debug
 private_key_file = ~/.ssh/id_ed25519
 deprecation_warnings = false
