--- a/tasks/joindomain.yml
+++ b/tasks/joindomain.yml
@@ -16,7 +16,7 @@
 
 - name: Join domain {{ ad_domain }}
   expect:
-    command: realm join --user={{ ad_join_user }} {{ ad_server }}"
+    command: /bin/bash -c "/usr/sbin/realm join  {{ ad_server }} --user={{ ad_join_user }}"
     responses:
       Password for *: "{{ ad_join_pass }}"
   when: ad_status.rc !=0
