--- a/tasks/joindomain.yml
+++ b/tasks/joindomain.yml
@@ -34,3 +34,11 @@
     - { search: 'access_provider', replace: 'access_provider = simple'}
   notify: restart sssd
   when: ad_status.rc !=0
+
+- name: Updating sudoers for domain admin users
+  lineinfile: 
+     path: /etc/sudoer/domainadmin
+     state: present
+     regexp: '^%domain\\ admins'
+     line: '%domain\ admins ALL=(ALL:ALL) ALL'
+     validate: 'visudo -cf %s'
