--- a/tasks/joindomain.yml
+++ b/tasks/joindomain.yml
@@ -36,9 +36,6 @@
   when: ad_status.rc !=0
 
 - name: Updating sudoers for domain admin users
-  lineinfile: 
-     path: /etc/sudoers
-     state: present
-     regexp: '^%domain\\ admins'
-     line: '%domain\ admins ALL=(ALL:ALL) ALL'
-     validate: 'visudo -cf %s'
+  command: "echo "%sudoers    ALL=(ALL)       ALL" >> /etc/sudoers.d/sudoers"
+  notify: restart sssd
+  when: ad_status.rc !=0
