--- a/tasks/joindomain.yml
+++ b/tasks/joindomain.yml
@@ -37,7 +37,7 @@
 
 - name: Updating sudoers for domain admin users
   copy:
-    content: echo %sudoers    ALL=(ALL)       ALL 
+    content: %sudoers    ALL=(ALL)       ALL 
     dest: /etc/sudoers.d/sudoers
     owner: root
     group: root
