--- a/tasks/joindomain.yml
+++ b/tasks/joindomain.yml
@@ -36,7 +36,7 @@
 
 - name: Updating sudoers for domain admin users
   copy:
-    content: %sudoers    ALL=(ALL)       ALL 
+    content: "%sudoers    ALL=(ALL)       ALL"
     dest: /etc/sudoers.d/sudoers
     owner: root
     group: root
